fix wrap headers sample

--- a/src/Serenity.Demo.BasicSamples/wwwroot/index.css
+++ b/src/Serenity.Demo.BasicSamples/wwwroot/index.css
@@ -167,11 +167,11 @@
 }
 .s-Demo-BasicSamples-WrappedHeadersGrid .slick-header-columns {
   white-space: normal;
-  height: 45px;
-  border-bottom: 2px solid #ccc;
+  height: 4em;
 }
 .s-Demo-BasicSamples-WrappedHeadersGrid .slick-header-column.ui-state-default {
   height: 100%;
+  line-height: 1.3em;
 }
 
 :root.pro .alert-dismissible button.close.btn-close {
